--- a/Week_1/HW1.ipynb
+++ b/Week_1/HW1.ipynb
@@ -151,7 +151,7 @@
    "id": "e65e4873",
    "metadata": {},
    "source": [
-    "#### Q1. Why are most models linear models?"
+    "#### Q1. Why do we usually begin with a linear model?"
    ]
   },
   {
