--- a/Week_2/HW2.ipynb
+++ b/Week_2/HW2.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "##### Output\n",
     "\n",
-    "Gradient $\\nabla_x a^{[L]}(x) \\in \\mathbb{R}^{1 \\times n_1}$\n",
+    "Gradient $\\nabla a^{[L]}(x) $\n",
     "\n",
     "---\n",
     "\n",
