--- a/Week_3/HW3_written.ipynb
+++ b/Week_3/HW3_written.ipynb
@@ -209,9 +209,34 @@
    "source": [
     "### Applying\n",
     "\n",
-    "Suppose we want to approximate $f(x) = x^5 + x^4 + x^3 + x^2 + x + 1 \\quad x\\in[-1,1]$\n",
     "\n",
-    "Because degree($f$) is 5, choose $s=5$"
+    "Choose $f(x)=x^5+x^4+x^3+x^2+x+1$ ，$x\\in[-1,1]$\n",
+    "\n",
+    "1. **Choose $s$**  \n",
+    "   因為 $f(x)$ 的最高次是 5，所以取 $s=5$（奇數）。  \n",
+    "\n",
+    "2. **使用 Lemma 3.2**  \n",
+    "   Lemma 3.2 告訴我們：對任意精度 $\\epsilon>0$，存在一個淺層神經網路 $\\tanh$ \\\n",
+    "  $\\psi_{5,\\epsilon} : [-1,1]\\to\\mathbb{R}^5$\n",
+    "   寬度為 $\\tfrac{3(s+1)}{2} = 9$，可以同時逼近所有 $x^p,(p=1,2,3,4,5)$。  \n",
+    "\n",
+    "3. **組合多項式**  \n",
+    "   由於 $f(x)=x^5+x^4+x^3+x^2+x+1=\\sum_{p=0}^5 x^p$  \\\n",
+    "   我們只需要把$(\\psi_{5,\\epsilon})_p$ 相加，再加上常數 1，就得到對 $f(x)$ 的近似：\n",
+    "   $\\tilde f(x) = \\sum_{p=0}^5 (\\psi_{5,\\epsilon})_p(x).$ \n",
+    "\n",
+    "4. **誤差控制**  \n",
+    "   每個單項式的逼近誤差 $\\le \\delta$。總共有 6 項，所以  \n",
+    "   $| f - \\tilde f \\|_{W^{k,\\infty}} \\le 6\\delta$\n",
+    "   取 $\\delta=\\varepsilon/6$。  \n",
+    "\n",
+    "5. **網路規模與權重大小**  \n",
+    "   網路寬度固定為 9（很小）。  \n",
+    "   權重大小大約會隨 $\\varepsilon^{-5/2}$ 增長）。  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "用 Lemma 3.2，我們可以建構一個 width=9的淺層 $\\tanh$ 網路，能在區間 $[-1,1]$ 上逼近  $f(x)=x^5+x^4+x^3+x^2+x+1$\n"
    ]
   }
  ],
