--- a/Week_3/HW3_written.ipynb
+++ b/Week_3/HW3_written.ipynb
@@ -238,6 +238,17 @@
     "\n",
     "用 Lemma 3.2，我們可以建構一個 width=9的淺層 $\\tanh$ 網路，能在區間 $[-1,1]$ 上逼近  $f(x)=x^5+x^4+x^3+x^2+x+1$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "986e8b91",
+   "metadata": {},
+   "source": [
+    "### Unanswered Questions\n",
+    "\n",
+    "In class we can approximate every polynoimal by using neural network. Can we use same way to approximate other function e.g. sin(x), cos(x)......\n",
+    "by using taylor expansion? What may happened, and what is its result?"
+   ]
   }
  ],
  "metadata": {
