--- a/Week_3/HW3_written.ipynb
+++ b/Week_3/HW3_written.ipynb
@@ -136,7 +136,12 @@
     "\\le \n",
     "\\Big( (2(p+2)p M)^{p+3} + (2 p k)^{k+1} \\Big) h^2\n",
     "=:\\epsilon.\n",
-    "$\n",
+    "$\\\n",
+    "\n",
+    "Remark:\\\n",
+    "tanh泰勒展開：\n",
+    "$\\tanh(x) = x - \\frac{x^3}{3} + \\frac{2x^5}{15} - \\frac{17x^7}{315} + O(x^9)$\\\n",
+    "可以觀察到全部都為奇次多項式，透過運算之後容易擬合奇數次多項式。\n",
     "\n",
     "Remark:\n",
     "\n",
