HW5 - fix problem

--- a/Week_5/HW5.ipynb
+++ b/Week_5/HW5.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "\n",
     "$$\n",
-    "\\textbf{MLE\\ of\\ } \\Sigma\n",
+    "\\textbf{MLE of } \\mu\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -204,7 +204,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\textbf{MLE\\ of\\ } \\Sigma\n",
+    "\\textbf{MLE of } \\Sigma\n",
     "$$\n",
     "\n",
     "\n",
