--- a/Week_10/HW10.ipynb
+++ b/Week_10/HW10.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "### 3.Unanswered Questions\n",
-    "1."
+    "1.在 Reverse SDE 的 Euler-Maruyama 求解過程中，$\\Delta t$ 的大小有什麼具體影響？如果 $\\Delta t$ 不夠小，會如何改變最終的數據分佈？"
    ]
   }
  ],
